# verbose-octo-parakeet

./: .gitignore  .readthedocs.yaml  README.md  environment.yml  noxfile.py  pyproject.toml  requirements.txt
.github/: codecov.yml
.github/workflows/: main.yml  python-package-conda.yml
data/: README.txt  nso_1968.h5  nso_1968.txt  nso_2024.txt  nso_2024.txt:Zone.Identifier
docs/: conf.py  index.md
notebook/: ksbcw.ipynb
notebooks/: ksbcw.ipynb  nso.ipynb
tests/: test_snell.py
