[project]
authors = [{name = "Lee Hyunwoo", email = "hyunwoo9174@outlook.com"}]
dependencies = []
name = "verbose-octo-parakeet"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-aarch64"]

[tool.pixi.pypi-dependencies]
verbose_octo_parakeet = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ruff = ">=0.9.6,<0.10"
numpy = ">=2.2.2,<3"
scipy = ">=1.15.1,<2"
matplotlib = ">=3.10.0,<4"
jupyterlab = ">=4.3.5,<5"
